# AdventOfCode

./: .gitignore  main.py  problem11.py  problem12.py  problem13.py  problem17.py  problem19.py  problem20.py  problem21.py  problem22.py  problem24.py  problem25.py  problem7.py  problem9.py
2019/day8/: build.gradle.kts
2020/: dynamic_programming.py  get_input.py  main.py  p2e.py  perms.py  problem10.py  problem11.py  problem14.py  problem15.py  problem16.py  problem18.py  problem23.py  problem6.py  problem7.py  problem8.py
2021/day1/: problem1.py
2021/day10/: problem10.py
2021/day11/: problem11.py
2021/day12/: problem12.py
2021/day13/: problem13.py
2021/day14/: problem14.py
2021/day15/: problem15.py
2021/day16/: problem16.py
2021/day2/: problem2.py
2021/day20/: problem20.py
2021/day21/: problem21.py
2021/day22/: problem22.py
2021/day3/: problem3.py
2021/day4/: problem4.py
2021/day5/: problem5.py
2021/day6/: problem6.py
2021/day7/: problem7.py
2021/day8/: problem8.py
2021/day9/: problem9.py
2022/day11/: Cargo.toml
2022/day15/: Cargo.toml
2022/day16/: Cargo.toml
2022/day19/: Cargo.toml
2022/day20/: day20.py
2022/day22/: Cargo.toml
2022/day6/: Cargo.toml
2022/day7/: Cargo.toml
2022/day8/: Cargo.toml
2022/day9/: Cargo.toml
2023/day10/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: day12.py
2023/day15/: Cargo.toml
2023/day17/: Cargo.toml
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day2/: Cargo.toml
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day16/: ;  (+1 more)
utils/: get_input.py
(+147 files in other folders)
