[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
regex = "1.11.1"
openblas-src = "0.10"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
almost = "0.2.0"

